Fix bisq dashboard tables overflow.

--- a/frontend/src/app/bisq/bisq-trades/bisq-trades.component.scss
+++ b/frontend/src/app/bisq/bisq-trades/bisq-trades.component.scss
@@ -1,12 +1,38 @@
+
 .table-container {
-    overflow: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    font-size: 13px;
-    @media(min-width: 576px){
-        font-size: 16px;
+  overflow: scroll;
+  scrollbar-width: none;
+  font-size: 13px;
+  &::-webkit-scrollbar {
+      display: none;
+  }
+  @media(min-width: 576px){
+      font-size: 16px;
+  }
+  thead th{
+    text-align: right;
+    &:first-child{
+      text-align: left;
     }
-    &::-webkit-scrollbar {
+    &:nth-child(2) {
+      display: none;
+      @media(min-width: 1100px){
+        display: table-cell;
+      }
+    }
+  }
+  tr {
+    td {
+      text-align: right;
+      &:first-child{
+        text-align: left;
+      }
+      &:nth-child(2) {
         display: none;
+        @media(min-width: 1100px){
+          display: table-cell;
+        }
+      }
     }
+  }
 }
